fixes: price div alignments with buttons

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,7 @@ footer {
   flex: 1 1 29rem;
   height: 47rem;
   padding: 1rem;
+  margin-bottom: 3rem;
 }
 
 .product {
@@ -96,12 +97,17 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  margin-bottom: 3rem;
 }
-.product img {
+.product__img {
   max-width: 37em;
   max-height: 37rem;
 }
+
+.product__img img {
+  width: 100%;
+  height: 37rem;
+}
+
 .product__price {
   display: flex;
   justify-content: space-between;
@@ -113,7 +119,9 @@ footer {
   flex: 1;
 }
 .product__price div {
-  font-size: 2rem;
+  font-size: 2rem;  
+  text-align: left;
+
 }
 .button:hover {
   border: 0.1rem #808080 solid;
